<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/weather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:gravity="center"
        android:text="@string/weather" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/photo_A"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:scaleType="centerInside"
                        android:cropToPadding="true"
                        android:background="@android:color/darker_gray"/>

                    <ImageButton
                        android:id="@+id/camera_A"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/camera_icon"/>

                </LinearLayout>

                <EditText
                    android:id="@+id/team_A"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="24dp"
                    android:gravity="center"
                    android:inputType="text"
                    android:text="@string/title_A" />

            </LinearLayout>

            <TextView
                android:id="@+id/score_A"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:textSize="30sp"
                android:gravity="center"
                android:text="@string/score_A" />

            <Button
                android:id="@+id/three_point_A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/three_point_A" />

            <Button
                android:id="@+id/two_point_A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/two_point_A" />

            <Button
                android:id="@+id/one_point_A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one_point_A" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:gravity="center"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/photo_B"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:scaleType="centerInside"
                        android:cropToPadding="true"
                        android:background="@android:color/darker_gray"/>

                    <ImageButton
                        android:id="@+id/camera_B"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/camera_icon"/>

                </LinearLayout>

                <EditText
                    android:id="@+id/team_B"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="24dp"
                    android:gravity="center"
                    android:inputType="text"
                    android:text="@string/title_B" />

            </LinearLayout>

            <TextView
                android:id="@+id/score_B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:textSize="30sp"
                android:gravity="center"
                android:text="@string/score_B" />

            <Button
                android:id="@+id/three_point_B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/three_point_B" />

            <Button
                android:id="@+id/two_point_B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/two_point_B" />

            <Button
                android:id="@+id/one_point_B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one_point_B" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_button" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/save_button" />

        <Button
            android:id="@+id/display_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/display_button" />

    </LinearLayout>

</LinearLayout>