<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textSize="15sp"
        android:gravity="center"
        android:text="@string/save_activity_message" />

    <Button
        android:id="@+id/who_won"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/who_won" />

    <TextView
        android:id="@+id/winning_team"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textSize="100sp"
        android:gravity="center"
        android:text="@string/winning_team" />

</LinearLayout>